fixed dropdown alignment on navbar

--- a/src/custom.css
+++ b/src/custom.css
@@ -27,7 +27,7 @@
     text-align: left!important;
     position: absolute!important;
     /* top: 0px; */
-    right: 0px;
+    left: 0px;
   }
 }
 /* @media screen and (max-width: 768px) {
